@@ -4,6 +4,6 @@ AUX dirsrv.initd 2444 RMD160 64e8e82f46f5aaf70a15051c310f12ed574e3b1b SHA1 e8247
 DIST 389-ds-base-1.2.1.tar.bz2 2741710 RMD160 274c122ead57449a98e4ac1751a107323e3eaa48 SHA1 3f1bd4a07e35d030f1a0557fb933ac17ff727cfe SHA256 1da0036931a251683bb824882dc68c56206642b2814f5a00827ba8a038a857fc
 DIST 389-ds-base-1.2.2.tar.bz2 2742349 RMD160 82ee3cb53d1d84d9a0264032f807dbb9f74dc56f SHA1 459aa7228b7ef775db5ba588a6b795db997da4f4 SHA256 d118dfd98eacf66ef23738cb4d7cf71309ff8ffe1c003c8837ab75db215d7996
 EBUILD 389-ds-base-1.2.1-r1.ebuild 2129 RMD160 3081369e06b4128ab696aa1881f166d25bd0203a SHA1 b59aace7e7bb9517ac540f76ca9ddb473c4c2672 SHA256 d4e3677d0cbb505ee352089d3e0c741ea0ab196ce41ed068f623eec4aa7bef58
-EBUILD 389-ds-base-1.2.2.ebuild 2431 RMD160 da448aa892434dfef6635cfdfaaea1c47da73be3 SHA1 6fef0bb1cd34d1dfcc8ab023adab717cf1260ec5 SHA256 a5ac9bd764b44ff3684eb2431d812c269b3e01a35130bff0a7ee5acf4b1e4d91
-MISC ChangeLog 1134 RMD160 97eaf28552cb7c7b38f1db606cdc31bf90d72f26 SHA1 55ea6db9f7e4163c6821a082c1a9d30134bdf14c SHA256 1bd3ca3283c3130e9fea4400e47b60ad4b3cd77e61597b5e8ccc7d159e9a771a
+EBUILD 389-ds-base-1.2.2.ebuild 2436 RMD160 1d4221b064abfef3ce6f33923f048804841ae674 SHA1 8690208e3724fe13c34bda2982cc07ca24e59028 SHA256 6840eab43cddc9e27cd308b617216b4c206b5c2c60e3d01f058f6d3f536b3447
+MISC ChangeLog 1248 RMD160 0e2d59125dbae0cff34ed83d3831774c7a912fbe SHA1 6ed2e85c9eebc17ecdbdaf79a43209b9885a088c SHA256 9da045fceb30a835968931458058e22d7a755009528dbf7c0fc47c408f24d1bf
 MISC metadata.xml 645 RMD160 7a451e3cfa444b90f65f9d50c1432bafbccc7f7a SHA1 02920189eaf0ceb030af0461a623eef4967bf14a SHA256 7e1d68801a760b2381ac5609fe23f90ee86623b4db0f78839c36aabed3e86d52
