@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  07 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
+  389-ds-base-1.2.2.ebuild:
+  add require depend nss[utils]
+
   05 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru> -files/bug435774.patch,
   389-ds-base-1.2.2.ebuild, -files/bug439829.patch,
   +files/configure.ac.patch, metadata.xml:
